--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "96dffe39-efee-4cfa-8e3d-9365c2ba4ac8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install -r ./requirements.txt -q"
    ]
@@ -87,14 +79,26 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Your prompt:  mumbai is\n"
+      "Your prompt:  what's the distance from the sun and the earth?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mumbai is a vibrant city located on the west coast of India. It is known for being the financial, commercial, and entertainment capital of the country. With a rich history, diverse culture, and bustling streets, Mumbai is a city that never sleeps. It is also home to Bollywood, the largest film industry in India.\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are chatbot having a conversation with a human\n",
+      "Human: light speed in vacuum\n",
+      "AI: The speed of light in a vacuum is approximately 299,792 kilometers per second (186,282 miles per second). This speed is considered to be the ultimate speed limit of the universe according to the theory of relativity proposed by Albert Einstein.\n",
+      "Human: and in water\n",
+      "AI: The speed of light in water is slower than in a vacuum. Light travels at about 225,000 kilometers per second in water, which is approximately 25% slower than its speed in a vacuum. This difference in speed is due to the higher refractive index of water compared to that of a vacuum, which causes light to slow down when passing through a medium like water.\n",
+      "Human: what's the distance from the sun and the earth?\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "The average distance from the Sun to the Earth is about 93 million miles (150 million kilometers). This distance is known as an astronomical unit (AU), which is often used as a unit of measurement for distances within our solar system. Keep in mind that this distance can vary slightly throughout the year due to the elliptical orbit of the Earth around the Sun.\n",
       "--------------------------------------------------\n"
      ]
     },
@@ -102,14 +106,28 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Your prompt:  what's the best time to visit?\n"
+      "Your prompt:  what did I ask you?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best time to visit Mumbai is from November to February, during the winter months. The weather is cooler and more pleasant during this time, making it perfect for exploring the city's attractions and enjoying outdoor activities. However, Mumbai is a bustling city that can be visited year-round, so it ultimately depends on your preferences and what you want to experience during your trip.\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are chatbot having a conversation with a human\n",
+      "Human: light speed in vacuum\n",
+      "AI: The speed of light in a vacuum is approximately 299,792 kilometers per second (186,282 miles per second). This speed is considered to be the ultimate speed limit of the universe according to the theory of relativity proposed by Albert Einstein.\n",
+      "Human: and in water\n",
+      "AI: The speed of light in water is slower than in a vacuum. Light travels at about 225,000 kilometers per second in water, which is approximately 25% slower than its speed in a vacuum. This difference in speed is due to the higher refractive index of water compared to that of a vacuum, which causes light to slow down when passing through a medium like water.\n",
+      "Human: what's the distance from the sun and the earth?\n",
+      "AI: The average distance from the Sun to the Earth is about 93 million miles (150 million kilometers). This distance is known as an astronomical unit (AU), which is often used as a unit of measurement for distances within our solar system. Keep in mind that this distance can vary slightly throughout the year due to the elliptical orbit of the Earth around the Sun.\n",
+      "Human: what did I ask you?\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "You asked about the distance from the Sun to the Earth.\n",
       "--------------------------------------------------\n"
      ]
     },
@@ -117,44 +135,30 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Your prompt:  2+2\n"
+      "Your prompt:  and the questions before that?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 + 2 equals 4.\n",
-      "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Your prompt:  and square of its answer is\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The square of 4 is 16.\n",
-      "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Your prompt:  what's special about that number\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number 16 is special because it is a square number, meaning it is the result of multiplying an integer by itself (in this case, 4 x 4 = 16). Square numbers have unique properties and are often used in mathematics and geometry. In addition, 16 is also a power of 2 and is considered a perfect square.\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are chatbot having a conversation with a human\n",
+      "Human: light speed in vacuum\n",
+      "AI: The speed of light in a vacuum is approximately 299,792 kilometers per second (186,282 miles per second). This speed is considered to be the ultimate speed limit of the universe according to the theory of relativity proposed by Albert Einstein.\n",
+      "Human: and in water\n",
+      "AI: The speed of light in water is slower than in a vacuum. Light travels at about 225,000 kilometers per second in water, which is approximately 25% slower than its speed in a vacuum. This difference in speed is due to the higher refractive index of water compared to that of a vacuum, which causes light to slow down when passing through a medium like water.\n",
+      "Human: what's the distance from the sun and the earth?\n",
+      "AI: The average distance from the Sun to the Earth is about 93 million miles (150 million kilometers). This distance is known as an astronomical unit (AU), which is often used as a unit of measurement for distances within our solar system. Keep in mind that this distance can vary slightly throughout the year due to the elliptical orbit of the Earth around the Sun.\n",
+      "Human: what did I ask you?\n",
+      "AI: You asked about the distance from the Sun to the Earth.\n",
+      "Human: and the questions before that?\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "You asked about the speed of light in a vacuum and in water.\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -165,13 +169,16 @@
     "from langchain.chains import LLMChain\n",
     "#1 imports\n",
     "from langchain.prompts import ChatPromptTemplate, HumanMessagePromptTemplate, MessagesPlaceholder\n",
-    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.memory import ConversationBufferMemory, FileChatMessageHistory\n",
     "\n",
     "llm= ChatOpenAI(model_name='gpt-3.5-turbo', temperature=1)\n",
     "\n",
     "#2 memory objects\n",
+    "\n",
+    "history = FileChatMessageHistory('chat_history.json')\n",
     "memory = ConversationBufferMemory(\n",
     "    memory_key='chat_history',\n",
+    "    chat_memory=history,\n",
     "    return_messages= True\n",
     ")\n",
     "\n",
@@ -190,7 +197,7 @@
     "    llm=llm,\n",
     "    prompt=prompt,\n",
     "    memory=memory,\n",
-    "    verbose=False\n",
+    "    verbose=True\n",
     ")\n",
     "\n",
     "while True:\n",
